Fix z-index error (sidebar hidden by card ghost)

--- a/src/src/components/Forms/Survey/Card/Card.scss
+++ b/src/src/components/Forms/Survey/Card/Card.scss
@@ -75,7 +75,7 @@
 	&.hidden {
 		transition-duration: 0s;
 		opacity: 0;
-		z-index: -10;
+		z-index: -1;
 	}
 
 	&.preview {
