--- a/src/src/components/Forms/Survey/Edit/Edit.scss
+++ b/src/src/components/Forms/Survey/Edit/Edit.scss
@@ -35,6 +35,7 @@
 			position: absolute;
 			left: 5rem;
 			top: 50vh;
+			z-index: 1;
 		}
 	}
 
